--- a/portfolio/costom-index.html
+++ b/portfolio/costom-index.html
@@ -12,8 +12,8 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style-1.css">
-    <script defer src="./index.js"></script>
+    <link rel="stylesheet" href="./css/style-1.css">
+    <script defer src="./js/index.js"></script>
 
 </head>
 
